--- a/public/app/plugins/datasource/grafana-azure-monitor-datasource/partials/multi-select.directive.html
+++ b/public/app/plugins/datasource/grafana-azure-monitor-datasource/partials/multi-select.directive.html
@@ -15,7 +15,7 @@
                     </a>
                     <a class="variable-option pointer" ng-repeat="option in vm.options" ng-class="{'selected': option.selected, 'highlighted': $index === vm.highlightIndex}" ng-click="vm.selectValue(option, $event)">
                         <span class="variable-option-icon"></span>
-                        <span>{{option.text}}</span>
+                        <span ng-class="{'template-variable': option.variable}">{{option.text}}</span>
                     </a>
                 </div>
             </div>
