--- a/public/app/plugins/datasource/grafana-azure-monitor-datasource/partials/query.editor.html
+++ b/public/app/plugins/datasource/grafana-azure-monitor-datasource/partials/query.editor.html
@@ -12,7 +12,7 @@
       <div class="gf-form-select-wrapper gf-form-select-wrapper--caret-indent">
         <select class="gf-form-input service-dropdown" ng-model="ctrl.target.azureMonitor.queryMode" 
         ng-options="f.value as f.text for f in [{value: 'singleResource', text: 'Single Resource'}, {value: 'crossResource', text: 'Multiple Resources'}]"
-        ng-change="ctrl.onQueryModeChange()"></select>></select>
+        ng-change="ctrl.onQueryModeChange()"></select></select>
       </div>
     </div>
     <div class="gf-form gf-form--grow">
